🐛 Github actionで起動するpythonに環境変数を渡す

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -10,7 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Tokyo
-      DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
     steps:
       # 1. コードをチェックアウト
@@ -33,5 +32,9 @@ jobs:
 
       # 5. main.py 実行
       - name: Run main.py
-        run: uv run --env DISCORD_WEBHOOK_URL python main.py
+        run: |
+          echo "Start notify message"
+          uv run python main.py
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
