--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -32,9 +32,5 @@ jobs:
 
       # 5. main.py 実行
       - name: Run main.py
-        run: |
-          echo "Start notify message"
-          uv run python main.py
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: DISCORD_WEBHOOK_URL=${{ secrets.DISCORD_WEBHOOK_URL }} uv run python main.py
 
