--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "python.defaultInterpreterPath": ".venv/bin/python",
     "cSpell.words": [
-      "usecase"
+      "usecase",  
+      "dotenv"
     ],
   }
   
